--- a/auth.html
+++ b/auth.html
@@ -41,7 +41,7 @@
             </p>
           </div>
           <div class="sidebar-hero-text">
-            <h2>Master Mathematics<br />with AI</h2>
+            <h2>Master Jamb<br />with AI</h2>
             <p>
               Personalized learning, instant feedback, and comprehensive
               practice for your exams.
