--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     <!-- Hero Section -->
     <section class="hero-section">
       <div class="hero-content">
-        <h1 class="hero-title">Master Mathematics <br />with Your AI Tutor</h1>
+        <h1 class="hero-title">Master Jamb <br />with Your AI Tutor</h1>
         <p class="hero-subtitle">
           Experience a new way to learn. Personalized explanations, instant
           doubt clearing, and comprehensive practice questions tailored just for
@@ -354,7 +354,7 @@
           </div>
           <h3 class="feature-title">AI-Powered Tutoring</h3>
           <p class="feature-text">
-            Get instant, accurate explanations for complex math problems. Our AI
+            Get instant, accurate explanations for complex jamb problems. Our AI
             tutor adapts to your learning style and pace.
           </p>
         </div>
