all style fixed

--- a/main.html
+++ b/main.html
@@ -18,19 +18,24 @@
     />
   </head>
   <body>
+
+
     <!--navbar sections-->
     <nav class="navbar">
       <div class="nav-container">
-        <!-- Hamburger Menu Button -->
+
+        <!-- Hamburger Menu Button at the left -->
         <div class="nav-center">
           <button class="hamburger" id="hamburger-btn">
             <i class="fas fa-bars"></i>
           </button>
+
+          <div class="logo-group">
+            <h2 class="logo-text">JambeX</h2>
+          </div>
         </div>
 
-        <div class="logo-group">
-          <h2 class="logo-text">JambeX</h2>
-        </div>
+        
 
         <!-- User Profile / Sign In Section -->
         <div id="auth-section" class="auth-section">
@@ -194,11 +199,7 @@
           <option>Select Subtopic</option>
         </select>
 
-
-
-
-
-        
+ 
       </div>
 
       <!--footer messages-->
